# ttrpg-rag-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluation/: queries.yaml
notebooks/: 01_data_extraction.ipynb
notebooks/data/processed/: mork_borg_extracted.json
