[tool.poetry]
name = "ttrpg-rag-assistant"
version = "0.1.0"
description = "RAG system for reducing hallucinations in TTRPG session support"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
tqdm = "^4.66.0"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "PTH"]
